docs: update API documentation with new endpoints and features
- Add documentation for AI Chat, Contact, and extended Orders/Payments APIs
- Document new filtering, statistics, and /me endpoints
- Update developer guide with AI integration and new features
- Update docker-compose.yml configuration
- Add v1.5.0 changelog entry